# Kruskals-Vs-Prims-MST

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  readme.md  s21_pa04_mikecuzzo_grantayers
cpp-src/: GraphEngine.cpp  GraphEngine.h  Kruskals.h
data/: graph0.txt  graph2.txt  graph3.txt  input.txt
data/graph/rsc/: generated-graph-stats-1.txt  generated-graph-stats-2.txt  generated-graph-stats-3.txt  generated-graph-stats-4.txt  generation-rules.txt
data/graph/text/: graph0.txt  graph1.txt  graph2.txt  graph3.txt
data/timing/: stats-density.csv  stats.csv
output/: Kruskal0.txt  Kruskal2.txt  Kruskal4.txt  Kruskal6.txt  Prims1.txt  Prims3.txt  Prims5.txt  Prims7.txt  performance0.txt  performance1.txt  performance2.txt  performance3.txt  performance4.txt  performance5.txt  performance6.txt  performance7.txt
python/: creategraph.py  createtiming.py  globalvariables.py
src/: GraphEngine.cpp  GraphEngine.h  Kruskals.cpp  Kruskals.h  Prims.cpp  Prims.h  UnionFind.cpp  UnionFind.h  main.cpp
